--- a/Coronavirus Website/extrasrc/about.html
+++ b/Coronavirus Website/extrasrc/about.html
@@ -52,7 +52,7 @@
 
         <div class="flex">
           <div class="hide-mobile">
-            <a href="./index.html"><img src="./assets/img/coronavirus.png" width="44px"></a>
+            <a href="../index.html"><img src="../assets/img/coronavirus.png" width="44px"></a>
 
           </div>
           <div class="align-middle">
@@ -120,8 +120,7 @@
               <li>Email me at webdevelopergenz@gmail.com.</li>
               <li>You can find my LinkedIn <a href="https://www.linkedin.com/feed/"><u>here</u></a>.</li>
               <li>Follow me on <a href="https://twitter.com/ping_kunal"><u>Twitter</u> </a>.</li>
-              <li>Message me on Discord <span class="text-green-300">'Google -
-                  ncov2021.com#5688'</span> is my username</li>
+              <li>Message me on Discord. <span class="text-green-300">CodeMonk#5688</span> is my username</li>
             </ol>
           </div>
         </div>
